# pypokedex

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  appveyor.yml  deploy.sh  pyproject.toml  requirements.txt  sample.py  setup.cfg  setup.py  test.py
.github/workflows/: python-package.yml
pypokedex/: __init__.py  _pokemon_data.py  api.py  constants.py  exceptions.py  pokemon.py
tests/: fixtures.py  sample_pokemon.py  test_pypokedex.py
