[tool.poetry]
name = "pypokedex"
version = "1.6.0"
description = "A minimal pokedex library"
authors = ["Arnav Borborah <arnavborborah11@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/arnavb/pypokedex#readme"
repository = "https://github.com/arnavb/pypokedex"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
]
include = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.21.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.267"
pytest = "^7.3.1"
pytest-cov = "^2.8.1"
responses = "^0.10.9"
pylint = "^2.4.4"
black = "^23.3.0"
twine = "^3.1.1"
rope = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
